# Padex

./: .gitignore  CLAUDE.md  README.md  mkdocs.yml  padel_data_schema_v0.1.0.docx  pyproject.toml
annotations/: labeling_config.xml
docs/: architecture.md  index.md  quickstart.md
docs/api/: calibration.md  events.md  index.md  padex.md  schemas.md  tracking.md
docs/guides/: calibration.md  cli.md  pipeline.md  shot-classification.md
examples/: quickstart.py  run_analysis.py
output/: M_001_analytics.json  M_001_report.html
scripts/: batch_collect_frames.py  debug_tracknet.py  extract_frames.py  generate_preannotations.py  generate_weak_labels.py  manual_calibrate.py  run_shot_detection_test.py  run_tracking_only.py  train_event_detector.py  video_urls.txt
src/padex/: __init__.py  pipeline.py  weights.py
src/padex/events/: __init__.py  bounce.py  point.py  shot.py  taxonomy.py
src/padex/io/: __init__.py  jsonl.py  parquet.py  video.py
src/padex/schemas/: __init__.py  events.py  tactics.py  tracking.py
src/padex/tactics/: __init__.py  heatmap.py  metrics.py  report.py
src/padex/tracking/: __init__.py  ball.py  court.py  device.py  pipeline.py  player.py
src/padex/viz/: __init__.py  animation.py  court.py  dashboard.py  frame.py  mini_court.py
tests/: __init__.py  conftest.py  test_ball_detection.py  test_bounce_detection.py  test_court_detection.py  test_frame_annotator.py  test_io.py  test_metrics.py  test_mini_court.py  test_point_segmentation.py  test_report.py  test_schemas.py  test_shot_classification.py  test_shot_detection.py  test_video_writer.py  test_visualization.py
