[project]
name = "padex"
version = "0.1.0"
description = "Open-source Python toolkit that transforms padel match broadcast footage into structured tracking data, event streams, and tactical analytics."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "opencv-python>=4.9",
    "ultralytics>=8.1",
    "polars>=1.0",
    "pyarrow>=15.0",
    "pydantic>=2.6",
    "lap>=0.5.12",
    "sahi>=0.11",
    "plotly>=5.18",
    "scipy>=1.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.3",
    "mypy>=1.9",
]

[dependency-groups]
dev = ["padex[dev]"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/padex"]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
